RESOLVED FIXED37428
[Qt] Patch to fix compilation warnings for QGraphicsWebView
https://bugs.webkit.org/show_bug.cgi?id=37428
Summary [Qt] Patch to fix compilation warnings for QGraphicsWebView
Alexis Menard (darktears)
Reported 2010-04-11 18:46:49 PDT
Created attachment 53124 [details] Patch to fix warnings. Fix compilation warnings in QGraphicsWebView. Trivial, should be quick to review the attached patch.
Attachments
Patch to fix warnings. (854 bytes, patch)
2010-04-11 18:46 PDT, Alexis Menard (darktears)
no flags
Diff against trunk with ChangeLog (1.37 KB, patch)
2010-04-14 13:01 PDT, Andreas Kling
hausmann: review-
hausmann: commit-queue-
Fixed style issue (1.38 KB, patch)
2010-05-06 04:37 PDT, Jocelyn Turcotte
no flags
Andreas Kling
Comment 1 2010-04-14 13:01:20 PDT
Created attachment 53355 [details] Diff against trunk with ChangeLog Thanks for the patch Alexis! I've updated it to the proper format. Please have a look at http://trac.webkit.org/wiki/QtWebKitContrib for future contributions :-)
Simon Hausmann
Comment 2 2010-04-16 17:20:56 PDT
Comment on attachment 53355 [details] Diff against trunk with ChangeLog > diff --git a/WebKit/qt/Api/qgraphicswebview.cpp b/WebKit/qt/Api/qgraphicswebview.cpp > index 919a10a..b3bcbe7 100644 > --- a/WebKit/qt/Api/qgraphicswebview.cpp > +++ b/WebKit/qt/Api/qgraphicswebview.cpp > @@ -647,9 +647,13 @@ QVariant QGraphicsWebView::itemChange(GraphicsItemChange change, const QVariant& > case ItemCursorChange: > return value; > case ItemCursorHasChanged: > - QEvent event(QEvent::CursorChange); > - QApplication::sendEvent(this, &event); > - return value; > + { > + QEvent event(QEvent::CursorChange); > + QApplication::sendEvent(this, &event); > + return value; > + } Coding style wants the opening brace on the line preceeding the code block. Only function definitions have braces on lines of their own. Otherwise LGTM of course.
Jocelyn Turcotte
Comment 3 2010-05-06 04:37:41 PDT
Created attachment 55225 [details] Fixed style issue
WebKit Commit Bot
Comment 4 2010-05-06 06:12:14 PDT
Comment on attachment 55225 [details] Fixed style issue Clearing flags on attachment: 55225 Committed r58877: <http://trac.webkit.org/changeset/58877>
WebKit Commit Bot
Comment 5 2010-05-06 06:12:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.