2010-05-06  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Patch to fix compilation warnings for QGraphicsWebView
        https://bugs.webkit.org/show_bug.cgi?id=37428

        Patch by Alexis Menard <alexis.menard@nokia.com>

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::itemChange):

Canonical link: https://commits.webkit.org/50124@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58877 268f45cc-cd09-0410-ab3c-d52691b4dbfc