WebKit/qt/Api/qgraphicswebview.cpp
@@ -650,10 +650,13 @@ QVariant QGraphicsWebView::itemChange(GraphicsItemChange change, const QVariant&
     // fire 'CursorChange'.
     case ItemCursorChange:
         return value;
-    case ItemCursorHasChanged:
-        QEvent event(QEvent::CursorChange);
-        QApplication::sendEvent(this, &event);
-        return value;
+    case ItemCursorHasChanged: {
+            QEvent event(QEvent::CursorChange);
+            QApplication::sendEvent(this, &event);
+            return value;
+        }
+    default:
+        break;
     }
 
     return QGraphicsWidget::itemChange(change, value);
